--- a/index.html
+++ b/index.html
@@ -464,6 +464,30 @@ Ce lexique a pour objectif d’expliquer de manière claire les différents comp
 **Exemple :** Un joueur s’enfuit d’une scène de crime en sautant frénétiquement pour gagner du temps.
                 `
             },
+            "moderation": {
+                title: "Modération",
+                content: `
+# Équipe de Modération Sentura RP
+
+L'équipe de modération de Sentura RP est dédiée à maintenir un environnement de jeu juste, respectueux et immersif pour tous les joueurs. Chaque membre contribue à faire respecter les règles et à assurer le bon déroulement des scènes de rôleplay.
+
+## Fondateurs
+* Dave
+* Roy
+* Maes
+* Balto
+
+## Co-fondateurs
+* Sosa
+* Julita
+* Bamaako
+
+## Chef Staff
+* Sossa (pour le moment)
+
+N'hésitez pas à contacter un membre de l'équipe de modération via Discord si vous avez des questions, des préoccupations ou si vous souhaitez signaler un comportement inapproprié. Votre collaboration est essentielle pour la qualité de notre communauté.
+                `
+            },
             "faq": {
                 title: "FAQ - Foire Aux Questions",
                 content: `
