--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ L'équipe de modération de Sentura RP est dédiée à maintenir un environnemen
 * Bamaako
 
 ## Chef Staff
-* Sossa (pour le moment)
+* Sosa (pour le moment)
 
 N'hésitez pas à contacter un membre de l'équipe de modération via Discord si vous avez des questions, des préoccupations ou si vous souhaitez signaler un comportement inapproprié. Votre collaboration est essentielle pour la qualité de notre communauté.
                 `
